--- a/tasks/section5.yml
+++ b/tasks/section5.yml
@@ -550,7 +550,7 @@
   block:
       - name: "SCORED | 5.3.1 | PATCH | Ensure lipam-pwquality is installed"
         apt:
-            name: libpam-pwquality
+            name: [libpam-pwquality,cracklib-runtime]
             state: present
             install_recommends: false
 
@@ -576,12 +576,12 @@
       - name: "SCORED | 5.3.2 | PATCH |  Ensure lockout for failed password attempts is configured - /etc/pam.d/common-account"
         lineinfile:
             dest: /etc/pam.d/common-account
-            line: 'account required pam_tally2.so'
+            line: 'account required pam_faillock.so'
 
       - name: "SCORED | 5.3.2 | PATCH |  Ensure lockout for failed password attempts is configured - /etc/pam.d/common-auth"
         lineinfile:
             dest: /etc/pam.d/common-auth
-            line: 'auth required pam_tally2.so onerr=fail audit silent deny=5 unlock_time=900'
+            line: 'auth required pam_faillock.so preauth audit silent deny=5 unlock_time=900'
   when:
       - ubuntu2004cis_rule_5_3_2
   tags:
